Improved: Only try to query network if a connection is available Fix: Do not crash if we get a Broadcast where artist, album or track are null (eg. when the sd card with the currently selected song is removed)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="button_retrieve_covers">Retrieve missing covers</string>
     <string name="title_activity_settings">Settings</string>
     <string name="lyrics_not_found">No lyrics found</string>
+    <string name="network_unavailable">Network not available</string>
     <string name="pref_autoDownloadCovers">Auto download covers</string>
     <string name="pref_autoDownloadCoversSumm">Download missing covers for album of current song</string>
     <string name="pref_downloadCoversToMediaFolder">Add to media folder</string>
